@@ -52,6 +52,7 @@ public enum SubSkillType {
     MINING_DEMOLITIONS_EXPERTISE(1),
     MINING_DOUBLE_DROPS,
     MINING_SUPER_BREAKER(1),
+    MINING_FUEL_EFFICIENCY(4),
 
     /* Repair */
     REPAIR_ARCANE_FORGING(8),
